--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
     <footer>
       <div class="container">
         <div class="content">
-          <img src="/images/logo.png" alt="logo" />
+          <img src="./images/logo.png" alt="logo" />
           <p>we are social</p>
           <div class="social">
             <i class="fa-brands fa-facebook"></i>
