--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
     <!-- End Header Section-->
     <!-- Start Landing Section -->
     <div class="landing">
+      <div class="images">
+        <img
+          src="./images/owl_is_standing_on_tree_branch_in_blue_sky_background_hd_owl.jpg"
+          alt="owl standing on tree branch"
+        />
+        <img src="./images/blue Owl.jpg" alt="" />
+        <img src="./images/blue owl 2.jpg" alt="" />
+      </div>
       <div class="overlay"></div>
       <div class="text">
         <div class="content">
@@ -61,13 +69,9 @@
         </div>
       </div>
       <div class="icons">
-        <i class="fa-solid fa-angle-left LeftArrow"></i>
-        <i class="fa-solid fa-angle-right RightArrow"></i>
-        <div class="circleIcons">
-          <div></div>
-          <div class="active"></div>
-          <div></div>
-        </div>
+        <i class="fa-solid fa-angle-left LeftArrow prev"></i>
+        <i class="fa-solid fa-angle-right RightArrow next"></i>
+        <div class="circleIcons"></div>
       </div>
     </div>
     <!-- End Landing Section -->
@@ -505,5 +509,7 @@
       </div>
     </footer>
     <!-- End Footer Section -->
+    <!-- JavaScript File -->
+    <script src="./JS/main.js"></script>
   </body>
 </html>
