--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <header>
       <div class="container">
         <a href="#" class="logo">
-          <img src="images/logo 1.png" class="img" alt="logo" />
-          <img src="images/logo 2.png" class="text" alt="logo" />
+          <img src="./images/logo 1.png" class="img" alt="logo" />
+          <img src="./images/logo 2.png" class="text" alt="logo" />
         </a>
         <nav>
           <i class="fas fa-bars toggle-menu"></i>
@@ -254,7 +254,7 @@
         </div>
       </div>
       <div class="image">
-        <img src="/images/about.png" alt="mobile devices" />
+        <img src="./images/about.png" alt="mobile devices" />
       </div>
     </div>
     <!-- End About Section -->
@@ -302,7 +302,7 @@
             Mauris blandit aliquet elit, eget tincidunt.
           </p>
           <div class="content">
-            <img src="/images/Avatar 1.jpg" alt="Avatar" />
+            <img src="./images/Avatar 1.jpg" alt="Avatar" />
             <div class="text">
               <p>
                 Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
@@ -312,7 +312,7 @@
             </div>
           </div>
           <div class="content">
-            <img src="/images/Avatar 2.jpg" alt="Avatar" />
+            <img src="./images/Avatar 2.jpg" alt="Avatar" />
             <div class="text">
               <p>
                 Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
@@ -492,8 +492,8 @@
     <footer>
       <div class="container">
         <div class="content">
-          <img src="/images/logo 1.png" alt="logo" />
-          <img src="/images/logo 2.png" alt="logo" />
+          <img src="./images/logo 1.png" alt="logo" />
+          <img src="./images/logo 2.png" alt="logo" />
 
           <p>we are social</p>
           <div class="social">
